--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "pinia": "^2.1.7",
     "uuid": "^10.0.0",
     "vue": "^3.4.29",
@@ -20,4 +21,3 @@
     "vite": "^5.3.1"
   }
 }
-
